Correctly ignore env files

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,9 @@
 survey.db
 django_survey_and_report.egg-info/
 survey_test/static/
-env
+env/
 survey_test_bak
-.env/
+.env
 .3env/
 .project
 .pydevproject
